<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BKK Info</string>
    <string name="service_name">BKK Info Notification Service</string>
    <string name="settings">Beállítások</string>
    <string name="refresh">Frissítés</string>
    <string name="changes_today">Mai forgalmi változások</string>
    <string name="changes_near_future">A közeljövő tervezett változásai</string>
    <string name="changes_future">Tervezett változások</string>
    <string name="loading">Betöltés...</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_notification_settings">NotificationSettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="alarms">Értesítések</string>
    <string name="notification_settings_title">Értesítések</string>
    <string name="network_warning_title">Hálózati hiba: </string>
    <string name="network_warning_description">Nincs internetkapcsolat !</string>
    
    <string name="notification_settings_sound_title">Az értesítések hangjelzéssel történjenek</string>
    <string name="notification_settings_sound_description">Értesítés hanggal</string>
    <string name="notification_settings_refresh_frequiency_title">Automatikus frissítés gyakorisága</string>
    <string name="notification_settings_refresh_frequiency_description">A új forgalmi rend változások ellenőrzésének gyakorisága</string>
    <string name="notification_settings_refresh_frequency_10">10 percenként</string>
    <string name="notification_settings_refresh_frequency_20">20 percenként</string>
    <string name="notification_settings_refresh_frequency_30">30 percenként</string>
    <string name="notification_settings_refresh_frequency_60">1 óránként</string>
    <string name="notification_settings_refresh_frequency_off">Soha (csak manuális)</string>
    <string name="notification_settings_last_refresh_title">Utolsó ellenőrzés</string>
    <string name="notification_settings_last_refresh_default_value">Még nem történt ellenőrzés</string>
    <string name="reset_all_selection">Kijelöltek törlése</string>

</resources>